--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
 body {
   font-family: 'helvetica neue', arial, sans-serif;
   font-weight: 700;
-  background-image: url(linedpaper.png);
+  background-image: url(IMG_4103_595.jpg);
   background-repeat: repeat;
 }
 #wrapper {
   width: 960px;
   margin: 20px auto 20px auto;
+}
+h1 {
+  color: red;
+}
+h4{
+  color:green;
+}
+#summary{
+  color: purple;
+}
+.skills-and-hobbies{
+  color: orange;
+}
+img{
+    width: 262px;
 }
